--- a/frontend/src/styles/signup.css
+++ b/frontend/src/styles/signup.css
@@ -4,5 +4,36 @@
 }
 
 .signupbtn{
-  margin: 10px 18px;
+    display: inline-block;
+    position: relative;
+    left: 333px;
+    bottom: -12px;
+    color: aliceblue;
+}
+
+.signuptext{
+  color: black;
+  display: inline-block;
+}
+
+.labeltext{
+  margin: 0px 40px;
+}
+
+.fn{
+  margin: 0px 66px;
+}
+
+.email{
+  margin: 0px 85px;
+}
+
+.password{
+  margin: 0px 70px;
+}
+
+.formfields{
+  display: inline-block;
+    position: relative;
+    bottom: 10px;
 }
