--- a/frontend/src/styles/homepage.css
+++ b/frontend/src/styles/homepage.css
@@ -7,7 +7,7 @@ h2 {
     color: white;
     text-align: center;
     font-weight: 1000;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }   
 
 p {
