--- a/frontend/src/styles/mybookshelf.css
+++ b/frontend/src/styles/mybookshelf.css
@@ -1,58 +1,37 @@
-.my-bookshelf {
-    padding: 20px;
+  .book-search{
     text-align: center;
+    margin: 2rem;
   }
-  
-  .books-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+
+  .search-input{
+    height: 31px;
+    width: 35%;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
   }
-  
-  .book-card {
-    border: 1px solid #ddd;
-    margin: 10px;
-    padding: 20px;
-    width: 200px;
-    text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
+  .search-input:focus {
+    border-color: salmon;
+    outline: none;
+    box-shadow: salmon;
   }
-  
-  .book-thumbnail {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    margin-bottom: 10px;
+
+  .search-button{
+    width: 8%;
+    height: 36px;
+    margin: auto 12px;
+    border-radius: 4px;
   }
+
   
-  .book-info {
-    margin-bottom: 20px;
+  .search-text{
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   }
-  
-  .review-section {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+
+  .book-card{
+    display: block;
+    width: 20%;
+    border: 1px dotted black;
+    padding: 1rem;
+    margin-bottom: 1rem;
   }
-  
-  textarea,
-  input {
-    padding: 10px;
-    font-size: 14px;
-    width: 100%;
-    max-width: 180px;
-  }
-  
-  button {
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 14px;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
