--- a/frontend/src/styles/mybookshelf.css
+++ b/frontend/src/styles/mybookshelf.css
@@ -1,37 +1,112 @@
-  .book-search{
-    text-align: center;
-    margin: 2rem;
-  }
+.my-bookshelf {
+  padding: 2rem;
+}
 
-  .search-input{
-    height: 31px;
-    width: 35%;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-  }
+.my-bookshelf h1 {
+  margin-bottom: 2rem;
+}
 
-  .search-input:focus {
-    border-color: salmon;
-    outline: none;
-    box-shadow: salmon;
-  }
+.success-message {
+  color: green;
+  background-color: antiquewhite;
+  margin-bottom: 20px;
+  padding: 1rem;
+  border-radius: 5px;
+  text-align: center;
+}
 
-  .search-button{
-    width: 8%;
-    height: 36px;
-    margin: auto 12px;
-    border-radius: 4px;
-  }
+.book-message {
+  color: black;
+  font-size: 16px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  text-align: center;
+  margin-top: 2rem;
+}
 
-  
-  .search-text{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  justify-content: center;
+}
 
-  .book-card{
-    display: block;
-    width: 20%;
-    border: 1px dotted black;
-    padding: 1rem;
-    margin-bottom: 1rem;
+.bookshelf-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  width: 25%;
+
+  padding: 1rem;
+  margin: 0 auto;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.book-box:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.book-box img {
+  max-width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+  margin-bottom: 1rem;
+}
+
+.book-title,
+.author-name {
+  color: black;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 14px;
+  text-align: center;
+}
+
+.book-rating-box {
+  width: 100%;
+  margin: 10px 0;
+  height: 25px;
+  text-align: center;
+}
+
+.book-review {
+  width: 100%;
+  margin: 10px 0;
+  height: 60px;
+}
+
+.remove-button,
+.remove-review-button {
+  margin-top: 10px;
+  padding: 10px 15px;
+  background-color: sandybrown;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.remove-button:hover,
+.remove-review-button:hover {
+  background-color: salmon;
+}
+
+@media (max-width: 768px) {
+  .book-box {
+    width: 45%;
   }
+}
+
+@media (max-width: 480px) {
+  .book-box {
+    width: 90%;
+  }
+}
+
