--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin : 8%;
+  /* margin : 8%; */
   
 }
 
@@ -13,6 +13,7 @@
   width: 100%;
   max-width: 400px;
   padding: 2rem;
+  color: white;
   /* background-color: #ffffff; */
   /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
   border-radius: 8px;
@@ -24,7 +25,7 @@
   text-align: center;
   margin-bottom: 1.5rem;
   font-size: 1.4rem;
-  color: #333333;
+  color:white;
 }
 
 /* Input fields */
@@ -36,6 +37,7 @@
   border-radius: 4px;
   font-size: 1rem;
   box-sizing: border-box;
+  font-size: 1.4 rem;
 }
 
 /* Input focus styling */
@@ -71,6 +73,7 @@
   color: #007bff;
   text-decoration: none;
   font-size: 1.1rem;
+  background-color: antiquewhite;
 }
 
 .login-form .link:hover {
@@ -89,3 +92,8 @@
   margin-top: 10px;
 }
 
+.login-backgroundimage{
+  background-image: url('../styles/book6.jpg');     
+  height: 80vh;
+  background-size: cover;
+}
