--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -74,6 +74,8 @@
   text-decoration: none;
   font-size: 1.1rem;
   background-color: antiquewhite;
+  height: 26px;
+  padding: 5px 0;
 }
 
 .login-form .link:hover {
