Fixed adding reviews into db

--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -99,3 +99,11 @@
   height: 80vh;
   background-size: cover;
 }
+
+.login-during{
+  background-color: brown;
+    height: 30px;
+    padding: 5px 0;
+    text-align: center;
+    color: white;
+}
